# SecureSwipe

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/: __init__.py  main.py  schemas.py  service.py
app/: __init__.py  streamlit_app.py
configs/: config.yaml
notebooks/: 01_eda.ipynb  02_baseline_model.ipynb  03_advanced_models.ipynb  03_baseline_models.ipynb  04_threshold_tuning.ipynb  05_explainability.ipynb
reports/: day4_baseline_model_summary.md  final_report.md
scripts/: evaluate_best_model.py  run_day4_baseline_models.py  run_eda.py  run_inference.py  train_all_models.py
src/: __init__.py
src/data/: __init__.py  load_data.py  make_dataset.py  validate_data.py
src/evaluation/: __init__.py  cost_analysis.py  metrics.py  plots.py  threshold_tuning.py
src/explainability/: __init__.py  feature_importance.py  shap_analysis.py
src/inference/: __init__.py  inference_pipeline.py  risk_scoring.py
src/models/: __init__.py  compare_models.py  predict.py  train_baseline.py  train_boosting.py  train_random_forest.py
src/preprocessing/: __init__.py  imbalance.py  preprocess.py  split_data.py
src/utils/: __init__.py  config.py  logger.py  paths.py
tests/: __init__.py  test_data_validation.py  test_day4_baseline_models.py  test_metrics.py  test_predict.py  test_preprocessing.py  test_project_setup.py  test_threshold_tuning.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ConfusionMatrix.tsx  GithubCTA.tsx  Hero.tsx  MetricCard.tsx  ModelPerformance.tsx  Section.tsx  (+5 more)
(+7 files in other folders)
